Added prod database and deploy script

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,10 @@ test:
   username: web
   password: ""
 
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
+development:
+  adapter: mysql
+  database: jessedearing_production
+  pool: 10
   timeout: 5000
+  username: web
+  password: ""
