--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: mysql
+  adapter: mysql2
   database: jessedearing_development
   pool: 5
   timeout: 5000
@@ -12,7 +12,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql
+  adapter: mysql2
   database: jessedearing_test
   pool: 5
   timeout: 5000
@@ -20,7 +20,7 @@ test:
   password: ""
 
 production:
-  adapter: mysql
+  adapter: mysql2
   database: jessedearing_production
   pool: 10
   timeout: 5000
