Changed DB backend to Postgres

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,33 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
+# mysql:
+#   adapter: mysql
+#   database: jessedearing_development
+#   pool: 5
+#   timeout: 5000
+#   username: root
+#   password: ""
 development:
-  adapter: mysql2
+  adapter: postgresql
   database: jessedearing_development
   pool: 5
   timeout: 5000
-  username: root
-  password: ""
+  # username: jdearing
+  # password: ""
+
+# development:
+#   adapter: postgresql
+#   database: jessedearing_development
+#   pool: 5
+#   timeout: 5000
+#   # username: jdearing
+#   # password: ""
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
+  adapter: postgresql
   database: jessedearing_test
   pool: 5
   timeout: 5000
@@ -20,7 +35,7 @@ test:
   password: ""
 
 production:
-  adapter: mysql2
+  adapter: postgresql
   database: jessedearing_production
   pool: 10
   timeout: 5000
